# gkentei

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  INSTALL.md  LICENSE  README.md  README_MIGRATION.md  README_api.md  README_scraper.md  development_plan.md  docker-compose.new.yml  docker-compose.yml  justfile  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: legacy_main.py  main.py
backend/app/api/endpoints/: exam.py  llm.py  problems.py  search.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py
backend/app/scripts/: init_embeddings.py
backend/app/services/embedding/: __init__.py  legacy_search_api.py  service.py
backend/app/services/exam/: __init__.py  generator.py
backend/app/services/exam/legacy/: generate.py  optimizer.py
backend/app/services/llm/: legacy_router.py  service.py
backend/app/services/problem/: __init__.py  crud.py
backend/app/services/scraper/: __init__.py  parser.py  parser_demo.py  scraper.py
backend/tests/legacy/: test_embedding_api.py  test_exam.py  test_llm_router.py  test_models.py  test_parser.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: AppHeader.tsx  AppNavbar.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/exam/: ExamPage.tsx
frontend/src/pages/search/: SearchPage.tsx
frontend/src/pages/settings/: SettingsPage.tsx
frontend/src/styles/: global.css  theme.ts
frontend/src/types/: api.ts
scripts/: download_models.sh  model_download.sh  setup.sh  test_ruff.sh
